# bicep-whatif-explain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.azure-pipelines/: README.md  bicep-whatif-azure-repos.yml  bicep-whatif-github-repo.yml
.claude/skills/diagram-formatting/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/scrub-project/: SKILL.md
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: bicep-pipeline.yml  bicep-sample-pipeline.yml  deploy-bicep.yml  pr-review-bicep.yml
bicep-sample/: main.bicep  tme-lab.bicepparam
bicep-sample/policy-logic/: apim-policy.xml
bicep_whatif_advisor/: __init__.py  cli.py  input.py  prompt.py  render.py
bicep_whatif_advisor/ci/: __init__.py  azdevops.py  diff.py  github.py  platform.py  risk_buckets.py
bicep_whatif_advisor/providers/: __init__.py  anthropic.py  azure_openai.py  ollama.py
docs/: GITHUB_ACTIONS_SETUP.md  PIPELINE.md  REFERENCE.md  RISK_ASSESSMENT_GUIDE.md  SPECIFICATION.md
docs/guides/: CICD_INTEGRATION.md  CLI_REFERENCE.md  GETTING_STARTED.md  RISK_ASSESSMENT.md
docs/specs/: CONFIDENCE_SCORING_SPEC.md  PLATFORM_AUTO_DETECTION_PLAN.md  SPECIFICATION.md
recreate-docs/: IMPLEMENTATION-PLAN.md  README.md
recreate-docs/prompts/: PHASE-1-CORE.md  PHASE-2-RENDERING.md  PHASE-3-CI-MODE.md  PHASE-4-RISK.md  PHASE-5-NOISE.md  PHASE-6-TESTING.md  README.md
recreate-docs/specifications/: 00-OVERVIEW.md  01-CLI-INPUT.md  02-PROVIDER-SYSTEM.md  03-PROMPT-ENGINEERING.md  04-OUTPUT-RENDERING.md  05-PLATFORM-DETECTION.md  06-RISK-ASSESSMENT.md  07-PR-COMMENTS.md  08-NOISE-FILTERING.md  09-TESTING.md
sample-bicep-deployment/: main.bicep  pre-production.bicepparam  production.bicepparam
whatif_explain/: cli.py  prompt.py  render.py
whatif_explain/ci/: risk_buckets.py  verdict.py
