[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bicep-whatif-advisor"
version = "1.2.1"
description = "AI-powered Azure Bicep What-If deployment advisor with automated safety reviews"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Azure Tools Contributors"}
]
keywords = ["azure", "bicep", "arm", "deployment", "what-if", "llm", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",  # Required for CI mode (GitHub/Azure DevOps PR comments)
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
azure = ["openai>=1.0.0"]
ollama = ["requests>=2.31.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
bicep-whatif-advisor = "bicep_whatif_advisor.cli:main"

[project.urls]
Homepage = "https://github.com/neilpeterson/bicep-whatif-advisor"
Issues = "https://github.com/neilpeterson/bicep-whatif-advisor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bicep_whatif_advisor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
